--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "require": {
         "php": "^8.2",
         "archtechx/enums": "^1.1",
+        "backpack/crud": "^6.8",
+        "backpack/theme-tabler": "^1.2",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
@@ -16,6 +18,8 @@
         "predis/predis": "^2.0"
     },
     "require-dev": {
+        "backpack/generators": "^4.0",
+        "barryvdh/laravel-debugbar": "*",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
