--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "backpack/crud": "^6.8",
         "backpack/theme-tabler": "^1.2",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.31",
         "laravel/jetstream": "^5.3",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
