--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=true
 AWS_URL=http://localhost:9000/local
 
 VITE_APP_NAME="${APP_NAME}"
+
+EVO_API_SERVER_URL=
+EVO_API_KEY=
+EVO_API_INSTANCE=
