feat(admin): add IsAdminMiddleware and enhance admin access control in routes and views

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,8 @@ VITE_APP_NAME="${APP_NAME}"
 EVO_API_SERVER_URL=
 EVO_API_KEY=
 EVO_API_INSTANCE=
+
+QUEUE_PRIORITY_QUOTA=2
+TICKET_EXPIRATION_TIME=2
+TICKET_EXPIRATION_VALIDATION_TIME=5
+QRCODE_EXPIRATION_TIME=5
