feat(docker): update Nginx and Supervisor configurations for improved application routing and logging

--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -2,39 +2,72 @@
 file=/var/run/supervisor.sock
 chmod=0770
 chown=nobody:nogroup
-# username = mysupervisord
-# password = mysupervisordpass
 
 [supervisord]
 nodaemon=true
 user=root
 
+;───────────────────────────────────────────────
+; NGINX
+;───────────────────────────────────────────────
 [program:nginx]
-command = nginx -c /etc/nginx/nginx.conf  -g 'daemon off;'
-user = root
-autostart = true
-
-[program:php-fpm]
-command=docker-php-entrypoint php-fpm
+command=nginx -g 'daemon off;'
+directory=/
 user=root
 autostart=true
-nodaemon=true
 autorestart=true
-
-[program:horizon]
-process_name=%(program_name)s
-command=docker-php-entrypoint php /var/www/app/artisan horizon
-autostart=true
-autorestart=true
-user=root
+stdout_logfile=/var/log/nginx-supervisor.log
 redirect_stderr=true
+
+;───────────────────────────────────────────────
+; OCTANE (HTTP – porta 8000)
+;───────────────────────────────────────────────
+[program:laravel-octane]
+command=docker-php-entrypoint php -d variables_order=EGPCS \
+        /var/www/app/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000
+directory=/var/www/app
+user=www-data
+autostart=true
+autorestart=true
+stdout_logfile=/var/www/app/storage/logs/octane.log
+redirect_stderr=true
+
+;───────────────────────────────────────────────
+; HORIZON (queues)
+;───────────────────────────────────────────────
+[program:laravel-horizon]
+command=docker-php-entrypoint php /var/www/app/artisan horizon
+directory=/var/www/app
+user=www-data
+autostart=true
+autorestart=true
 stdout_logfile=/var/www/app/storage/logs/horizon.log
+redirect_stderr=true
 stopwaitsecs=300
 
-[program:laravel-scheduler]
-process_name=%(program_name)s_%(process_num)02d
-command=docker-php-entrypoint php /var/www/app/artisan schedule:work
+;───────────────────────────────────────────────
+; REVERB (WebSocket – porta 8080)
+;───────────────────────────────────────────────
+[program:laravel-reverb]
+command=docker-php-entrypoint php /var/www/app/artisan reverb:start \
+        --host=0.0.0.0 --port=8080
+directory=/var/www/app
+user=www-data
 autostart=true
 autorestart=true
+stdout_logfile=/var/www/app/storage/logs/reverb.log
+redirect_stderr=true
+stopwaitsecs=300
+
+;───────────────────────────────────────────────
+; SCHEDULER (artigo schedule:work)
+;───────────────────────────────────────────────
+[program:laravel-scheduler]
+command=docker-php-entrypoint php /var/www/app/artisan schedule:work
+directory=/var/www/app
 user=www-data
 numprocs=1
+autostart=true
+autorestart=true
+stdout_logfile=/var/www/app/storage/logs/scheduler.log
+redirect_stderr=true
