--- a/docker/nginx/sites.conf
+++ b/docker/nginx/sites.conf
@@ -1,44 +1,57 @@
-server {
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
+# ─────────── WebSocket upgrade helper ───────────
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
 
-    server_name localhost 127.0.0.1;
-    root /var/www/app/public;
- 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    large_client_header_buffers 4 32k;
+server {
+    listen       80;
+    listen       [::]:80;
+    server_name  localhost 127.0.0.1;
+    root         /var/www/app/public;
+    index        index.php;
+    charset      utf-8;
     client_max_body_size 100M;
- 
-    index index.php index.html;
- 
-    charset utf-8;
- 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
+    server_tokens off;
+
+    # ─────────── Rotas normais passadas ao Octane ───────────
+    location /index.php    { try_files /not_exists @octane; }
+    location /             { try_files $uri $uri/ @octane; }
+
+    # ─────────── WebSocket Reverb ───────────
+    location /reverb {
+        proxy_pass         http://127.0.0.1:8080;
+        proxy_http_version 1.1;
+
+        proxy_set_header   Host $host;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection $connection_upgrade;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
- 
+
+    # ─────────── Fallback p/ Octane Swoole ───────────
+    location @octane {
+        set $suffix "";
+        if ($uri = /index.php) { set $suffix ?$query_string; }
+
+        proxy_http_version 1.1;
+        proxy_set_header   Host $http_host;
+        proxy_set_header   Scheme $scheme;
+        proxy_set_header   SERVER_PORT $server_port;
+        proxy_set_header   REMOTE_ADDR $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection $connection_upgrade;
+
+        proxy_pass http://127.0.0.1:8000$suffix;
+    }
+
+    # ─────────── Outros ajustes ───────────
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
- 
-    error_page 500 503 /error.html;
-    location = /error.html {
-            root /var/www/html;
-            internal;
-    }
- 
-    location ~ \.php$ {
-        try_files $uri /index.php =404;
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        include fastcgi_params;
-        fastcgi_index index.php;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        fastcgi_read_timeout 120;#2min
-    }
- 
-    location ~ /\.(?!well-known).* {
-        deny all;
-    }
+
+    access_log off;
+    error_log  /var/log/nginx/domain-error.log error;
+
+    error_page 404 /index.php;
 }
