--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -23,8 +23,7 @@ redirect_stderr=true
 ; OCTANE (HTTP – porta 8000)
 ;───────────────────────────────────────────────
 [program:laravel-octane]
-command=docker-php-entrypoint php -d variables_order=EGPCS \
-        /var/www/app/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000
+command=docker-php-entrypoint php -d variables_order=EGPCS /var/www/app/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000
 directory=/var/www/app
 user=www-data
 autostart=true
