--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -15,6 +15,8 @@ services:
       resources:
         limits: { cpus: "2", memory: 4G }
       restart_policy: { condition: on-failure }
+      placement:
+        constraints: [ node.hostname == autonix-server-02 ]
 
   db-mysql:
     image: bitnami/mysql:9.3.0
