fix(docker): update PHP-FPM version and improve Nginx configuration

--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -20,16 +20,14 @@ stdout_logfile=/var/log/nginx-supervisor.log
 redirect_stderr=true
 
 ;───────────────────────────────────────────────
-; OCTANE (HTTP – porta 8000)
+;  PHP-FPM
 ;───────────────────────────────────────────────
-[program:laravel-octane]
-command=docker-php-entrypoint php -d variables_order=EGPCS /var/www/app/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000
-directory=/var/www/app
-user=www-data
+[program:php-fpm]
+command=docker-php-entrypoint php-fpm
+user=root
 autostart=true
+nodaemon=true
 autorestart=true
-stdout_logfile=/var/www/app/storage/logs/octane.log
-redirect_stderr=true
 
 ;───────────────────────────────────────────────
 ; HORIZON (queues)
