fix(deploy): remove IMAGE_TAG variable and use 'latest' for Docker image

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   vai-na-fila:
-    image: laravel-vai-na-fila:${IMAGE_TAG}   # <── tag chega via variável de ambiente
+    image: laravel-vai-na-fila:latest
     networks: [ traefik_public ]
     deploy:
       replicas: 1
