--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,6 @@ jobs:
     # 1) (opcional) Só para ter o código local p/ linter, etc.
     - uses: actions/checkout@v4
 
-    # 2) Define a tag (SHA curto) e exporta
-    - id: vars
-      run: echo "IMAGE_TAG=${GITHUB_SHA::8}" >> "$GITHUB_ENV"
-
-    # 3) Entra no host por SSH (senha) e faz tudo lá
     - name: Build & Deploy on Swarm host
       uses: appleboy/ssh-action@v1.0.3
       with:
@@ -29,7 +24,6 @@ jobs:
         port:      ${{ secrets.PORT }}
         username:  ${{ secrets.USERNAME }}
         password:  ${{ secrets.PASSWORD }}
-        envs: IMAGE_TAG   # passa a variável para o shell remoto
         script: |
           set -e
 
@@ -38,7 +32,7 @@ jobs:
           git reset --hard origin/main
 
           # Build da imagem localmente
-          docker build -t laravel-vai-na-fila:${IMAGE_TAG} .
+          docker build -t laravel-vai-na-fila .
 
           # Variáveis de compose (DB)
           export IMAGE_TAG=${IMAGE_TAG}
