fix(docker): update Traefik service configuration in docker-compose and streamline command in supervisord

--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -46,8 +46,7 @@ stopwaitsecs=300
 ; REVERB (WebSocket – porta 8080)
 ;───────────────────────────────────────────────
 [program:laravel-reverb]
-command=docker-php-entrypoint php /var/www/app/artisan reverb:start \
-        --host=0.0.0.0 --port=8080
+command=docker-php-entrypoint php /var/www/app/artisan reverb:start --host=0.0.0.0 --port=8080
 directory=/var/www/app
 user=www-data
 autostart=true
