--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,8 +9,8 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.vai-na-fila.rule=Host(`vai-na-fila.autonix.com.br`)"
+        - "traefik.http.routers.vai-na-fila.service=vai-na-fila"
         - "traefik.http.routers.vai-na-fila.entrypoints=https"
-        - "traefik.http.routers.vai-na-fila.tls=true"
         - "traefik.http.services.vai-na-fila.loadbalancer.server.port=80"
       resources:
         limits: { cpus: "2", memory: 4G }
