fix(docker): enhance WebSocket and PHP-FPM configurations in sites.conf

--- a/docker/nginx/sites.conf
+++ b/docker/nginx/sites.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
 
-    server_name _;                       # qualquer host
+    server_name _;                               # catch-all
     root /var/www/app/public;
 
     # ───── Segurança / boas-práticas ─────
@@ -11,58 +11,85 @@ server {
     large_client_header_buffers 4 32k;
     client_max_body_size 200M;
 
-    index index.php index.html;
+    index index.php;
     charset utf-8;
 
-    # ─────────── WebSocket Reverb ───────────
-    # Rota padrão do Reverb/Pusher: /app/<APP_KEY>…
-    location ^~ /app {
-        proxy_pass         http://127.0.0.1:8080;
+    # ────────────────────────────────────────────────────────────
+    #  Laravel Reverb
+    # ────────────────────────────────────────────────────────────
+
+    # 1) WebSocket (Echo/cliente)
+    location ~ ^/app/(?<reverbkey>.*)$ {
+        proxy_pass         http://127.0.0.1:8080/app/$reverbkey;
         proxy_http_version 1.1;
 
-        # WebSocket handshake
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host              $http_host;
+        proxy_set_header Scheme            $scheme;
+        proxy_set_header SERVER_PORT       $server_port;
+        proxy_set_header REMOTE_ADDR       $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Encabeçamentos usuais
+        # handshake WebSocket
+        proxy_set_header Upgrade           $http_upgrade;
+        proxy_set_header Connection        "Upgrade";
+
+        proxy_read_timeout 120;
+        proxy_send_timeout 120;
+    }
+
+    # 2) Endpoint de broadcast (backend → Reverb)
+    location ~ ^/apps/(?<reverbid>[^/]+)/events$ {
+        proxy_pass         http://127.0.0.1:8080/apps/$reverbid/events;
+        proxy_http_version 1.1;
+
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # evita timeout longo em WS inativos
-        proxy_read_timeout 60;
+        proxy_read_timeout 120;
+        proxy_send_timeout 120;
     }
 
-    # ─────────── Laravel HTTP ───────────
+    # ────────────────────────────────────────────────────────────
+    #  Laravel HTTP
+    # ────────────────────────────────────────────────────────────
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Arquivos triviais
+    # Itens triviais
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    # Página de erro customizada
+    # ────────────────────────────────────────────────────────────
+    #  PHP-FPM
+    # ────────────────────────────────────────────────────────────
+    location ~ \.php$ {
+        include fastcgi_params;
+        # Use **um** dos dois:
+        fastcgi_pass 127.0.0.1:9000;                 # via TCP
+        # fastcgi_pass unix:/var/run/php/php8.3-fpm.sock;  # via socket
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+
+        fastcgi_index index.php;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_read_timeout 120;
+    }
+
+    # ────────────────────────────────────────────────────────────
+    #  Páginas de erro / segurança extra
+    # ────────────────────────────────────────────────────────────
+    error_page 404 /index.php;
     error_page 500 503 /error.html;
     location = /error.html {
         root /var/www/html;
         internal;
     }
 
-    # PHP-FPM (Octane/FPM fallback → 127.0.0.1:9000)
-    location ~ \.php$ {
-        try_files $uri /index.php =404;
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        include fastcgi_params;
-        fastcgi_index index.php;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        fastcgi_read_timeout 120; # 2 min
-    }
-
-    # Bloquear arquivos ocultos
+    # Bloquear arquivos ocultos (.env, .git, etc.)
     location ~ /\.(?!well-known).* {
         deny all;
     }
