fix(docker): update server_name and WebSocket location configurations in sites.conf

--- a/docker/nginx/sites.conf
+++ b/docker/nginx/sites.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
 
-    server_name _;                               # catch-all
+    server_name localhost 127.0.0.1 vai-na-fila.autonix.com.br;
     root /var/www/app/public;
 
     # ───── Segurança / boas-práticas ─────
@@ -19,7 +19,7 @@ server {
     # ────────────────────────────────────────────────────────────
 
     # 1) WebSocket (Echo/cliente)
-    location ~ ^/app/(?<reverbkey>.*)$ {
+    location ~ /app/(?<reverbkey>.*)$ {
         proxy_pass         http://127.0.0.1:8080/app/$reverbkey;
         proxy_http_version 1.1;
 
@@ -41,7 +41,7 @@ server {
     # 2) Endpoint de broadcast (backend → Reverb)
     location ~ ^/apps/(?<reverbid>[^/]+)/events$ {
         proxy_pass         http://127.0.0.1:8080/apps/$reverbid/events;
-        proxy_http_version 1.1;
+        #proxy_http_version 1.1;
 
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
