fix(docker): correct WebSocket location regex in sites.conf

--- a/docker/nginx/sites.conf
+++ b/docker/nginx/sites.conf
@@ -19,7 +19,7 @@ server {
     # ────────────────────────────────────────────────────────────
 
     # 1) WebSocket (Echo/cliente)
-    location ~ /app/(?<reverbkey>.*)$ {
+    location ~ /app/(?<reverbkey>.*) {
         proxy_pass         http://127.0.0.1:8080/app/$reverbkey;
         proxy_http_version 1.1;
 
