--- a/docker/nginx/sites.conf
+++ b/docker/nginx/sites.conf
@@ -18,39 +18,18 @@ server {
     #  Laravel Reverb
     # ────────────────────────────────────────────────────────────
 
-    # 1) WebSocket (Echo/cliente)
-    location ~ /app/(?<reverbkey>.*) {
-        proxy_pass         http://127.0.0.1:8080/app/$reverbkey;
+    location /app {
         proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
 
-        proxy_set_header Host              $http_host;
-        proxy_set_header Scheme            $scheme;
-        proxy_set_header SERVER_PORT       $server_port;
-        proxy_set_header REMOTE_ADDR       $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # handshake WebSocket
-        proxy_set_header Upgrade           $http_upgrade;
-        proxy_set_header Connection        "Upgrade";
-
-        proxy_read_timeout 120;
-        proxy_send_timeout 120;
-    }
-
-    # 2) Endpoint de broadcast (backend → Reverb)
-    location ~ ^/apps/(?<reverbid>[^/]+)/events$ {
-        proxy_pass         http://127.0.0.1:8080/apps/$reverbid/events;
-        #proxy_http_version 1.1;
-
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_read_timeout 120;
-        proxy_send_timeout 120;
-    }
+        proxy_pass http://0.0.0.0:8080;
+}
 
     # ────────────────────────────────────────────────────────────
     #  Laravel HTTP
